--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "poll-api",
+  "name": "dncs-poll-api",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vercel dev",
-    "build": "tsc",
-    "start": "vercel dev"
+    "build": "tsc"
   },
   "dependencies": {
-    "@upstash/redis": "^1.28.3",
-    "uuid": "^9.0.1"
+    "@upstash/redis": "^1.35.4",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "typescript": "^5.4.5",
     "@types/node": "^20.12.7",
-    "@vercel/node": "^3.0.6",
-    "typescript": "^5.4.5"
+    "@vercel/node": "^3.0.6"
   }
 }
