--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-    "functions": {
-        "api/**/*.ts": {
-            "runtime": "vercel-node@3.0.0"
+    "builds": [
+        {
+            "src": "api/**/*.ts",
+            "use": "@vercel/node"
         }
-    }
+    ]
 }
